--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,19 +1,28 @@
 .places {
-  text-align: center;
+    margin-top: 30px;
+    display: flex;
+    /* box-sizing: border-box; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* border: #FF5A5F 2px solid; */
 }
+
+.places h1, .places h2 {
+    font-size: 30px;
+}
+
 .places h1 {
-  font-size: 30px;
-  text-align: left;
+    width: 100%;
 }
-article {
-  width: 390px;
-  border: 1px solid #FF5A5F;
-  border-radius: 4px;
-  padding: 20px;
-  margin: 20px;
-  display: inline-block;
-}
-article h2 {
-  font-size: 30px;
-  text-align: center;
+
+.places article {
+    width: 390px;
+    min-width: 390px;
+    margin: 20px;
+    padding: 20px;
+    border: #FF5A5F 1px solid;
+    border-radius: 4px;
+    text-align: center;
+    /* flex: 1 2 auto; */
 }
